feat: add visual selection color to tmux themes
This change introduces a new '@thm_visual' color variable to all tmux
themes, which is used for visual selections in tmux.

The 'extras/tmux/generate_tmux.lua' script has been updated to source
this color from 'palette.ui.search.bg'. All dark and light theme
variations have been regenerated.

--- a/extras/tmux/themes/dark/oasis_cactus_dark.conf
+++ b/extras/tmux/themes/dark/oasis_cactus_dark.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#ddf0e5"
 set -ogq @thm_core "#1c261e"
 set -ogq @thm_mantle "#2c3a30"
 set -ogq @thm_surface "#3c4b3e"
+set -ogq @thm_visual "#532e2e"
 
 # General
 set -ogq @thm_red "#ff7979"
