--- a/extras/tmux/themes/dark/oasis_canyon_dark.conf
+++ b/extras/tmux/themes/dark/oasis_canyon_dark.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#f8e7d3"
 set -ogq @thm_core "#2f1a05"
 set -ogq @thm_mantle "#402412"
 set -ogq @thm_surface "#624020"
+set -ogq @thm_visual "#2b4a46"
 
 # General
 set -ogq @thm_red "#ff7979"
