--- a/extras/tmux/themes/dark/oasis_dune_dark.conf
+++ b/extras/tmux/themes/dark/oasis_dune_dark.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#e8e5da"
 set -ogq @thm_core "#2e2620"
 set -ogq @thm_mantle "#3c332c"
 set -ogq @thm_surface "#534a3f"
+set -ogq @thm_visual "#50325a"
 
 # General
 set -ogq @thm_red "#ff7979"
