--- a/extras/tmux/themes/dark/oasis_lagoon_dark.conf
+++ b/extras/tmux/themes/dark/oasis_lagoon_dark.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#d9e6fa"
 set -ogq @thm_core "#101825"
 set -ogq @thm_mantle "#1a283f"
 set -ogq @thm_surface "#22385c"
+set -ogq @thm_visual "#5a3824"
 
 # General
 set -ogq @thm_red "#ff7979"
