--- a/extras/tmux/themes/dark/oasis_twilight_dark.conf
+++ b/extras/tmux/themes/dark/oasis_twilight_dark.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#e6e0f8"
 set -ogq @thm_core "#221b2f"
 set -ogq @thm_mantle "#2b243b"
 set -ogq @thm_surface "#352d47"
+set -ogq @thm_visual "#4d4528"
 
 # General
 set -ogq @thm_red "#ff7979"
