--- a/extras/tmux/themes/light/1/oasis_lagoon_light_1.conf
+++ b/extras/tmux/themes/light/1/oasis_lagoon_light_1.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#40577a"
 set -ogq @thm_core "#f9fafb"
 set -ogq @thm_mantle "#f0f2f5"
 set -ogq @thm_surface "#dde3e9"
+set -ogq @thm_visual "#9fcae0"
 
 # General
 set -ogq @thm_red "#c51414"
