--- a/extras/tmux/themes/light/1/oasis_midnight_light_1.conf
+++ b/extras/tmux/themes/light/1/oasis_midnight_light_1.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#5c534c"
 set -ogq @thm_core "#f9f6f5"
 set -ogq @thm_mantle "#f3edeb"
 set -ogq @thm_surface "#e8dcd8"
+set -ogq @thm_visual "#e19d9d"
 
 # General
 set -ogq @thm_red "#c11313"
