--- a/extras/tmux/themes/light/2/oasis_abyss_light_2.conf
+++ b/extras/tmux/themes/light/2/oasis_abyss_light_2.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#585048"
 set -ogq @thm_core "#f8f0e7"
 set -ogq @thm_mantle "#f5e9db"
 set -ogq @thm_surface "#eedac3"
+set -ogq @thm_visual "#e19d9d"
 
 # General
 set -ogq @thm_red "#bb1313"
