--- a/extras/tmux/themes/light/2/oasis_cactus_light_2.conf
+++ b/extras/tmux/themes/light/2/oasis_cactus_light_2.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#44584c"
 set -ogq @thm_core "#eef7f2"
 set -ogq @thm_mantle "#e4f2ea"
 set -ogq @thm_surface "#cfe8da"
+set -ogq @thm_visual "#a4dac0"
 
 # General
 set -ogq @thm_red "#bf1313"
