--- a/extras/tmux/themes/light/2/oasis_lagoon_light_2.conf
+++ b/extras/tmux/themes/light/2/oasis_lagoon_light_2.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#3d5273"
 set -ogq @thm_core "#ebf1f9"
 set -ogq @thm_mantle "#dfe9f5"
 set -ogq @thm_surface "#c8d8ee"
+set -ogq @thm_visual "#9fcae0"
 
 # General
 set -ogq @thm_red "#ba1313"
