--- a/extras/tmux/themes/light/2/oasis_midnight_light_2.conf
+++ b/extras/tmux/themes/light/2/oasis_midnight_light_2.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#584f48"
 set -ogq @thm_core "#f8eee7"
 set -ogq @thm_mantle "#f5e6db"
 set -ogq @thm_surface "#eed5c3"
+set -ogq @thm_visual "#e19d9d"
 
 # General
 set -ogq @thm_red "#b91313"
