--- a/extras/tmux/themes/light/2/oasis_mirage_light_2.conf
+++ b/extras/tmux/themes/light/2/oasis_mirage_light_2.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#425858"
 set -ogq @thm_core "#ebf9f9"
 set -ogq @thm_mantle "#dff5f5"
 set -ogq @thm_surface "#c8eeee"
+set -ogq @thm_visual "#9fe0d7"
 
 # General
 set -ogq @thm_red "#c01313"
