--- a/extras/tmux/themes/light/2/oasis_sol_light_2.conf
+++ b/extras/tmux/themes/light/2/oasis_sol_light_2.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#793e33"
 set -ogq @thm_core "#f8eae7"
 set -ogq @thm_mantle "#f5e0db"
 set -ogq @thm_surface "#eecbc3"
+set -ogq @thm_visual "#e19d9d"
 
 # General
 set -ogq @thm_red "#b61212"
