--- a/extras/tmux/themes/light/2/oasis_starlight_light_2.conf
+++ b/extras/tmux/themes/light/2/oasis_starlight_light_2.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#5b5341"
 set -ogq @thm_core "#f9f5ec"
 set -ogq @thm_mantle "#f5efe0"
 set -ogq @thm_surface "#eee3c9"
+set -ogq @thm_visual "#dacfa4"
 
 # General
 set -ogq @thm_red "#bf1313"
