--- a/extras/tmux/themes/light/3/oasis_dune_light_3.conf
+++ b/extras/tmux/themes/light/3/oasis_dune_light_3.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#525047"
 set -ogq @thm_core "#f4efdd"
 set -ogq @thm_mantle "#f0ead1"
 set -ogq @thm_surface "#e9dfba"
+set -ogq @thm_visual "#dacfa4"
 
 # General
 set -ogq @thm_red "#b81313"
