--- a/extras/tmux/themes/light/3/oasis_midnight_light_3.conf
+++ b/extras/tmux/themes/light/3/oasis_midnight_light_3.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#524943"
 set -ogq @thm_core "#f7e2d4"
 set -ogq @thm_mantle "#f5d9c7"
 set -ogq @thm_surface "#f0c8ad"
+set -ogq @thm_visual "#e19d9d"
 
 # General
 set -ogq @thm_red "#ae1212"
