--- a/extras/tmux/themes/light/3/oasis_mirage_light_3.conf
+++ b/extras/tmux/themes/light/3/oasis_mirage_light_3.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#405454"
 set -ogq @thm_core "#dbf5f5"
 set -ogq @thm_mantle "#cff2f2"
 set -ogq @thm_surface "#b7ebeb"
+set -ogq @thm_visual "#9fe0d7"
 
 # General
 set -ogq @thm_red "#b91313"
