--- a/extras/tmux/themes/light/3/oasis_rose_light_3.conf
+++ b/extras/tmux/themes/light/3/oasis_rose_light_3.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#594353"
 set -ogq @thm_core "#f4ddee"
 set -ogq @thm_mantle "#f0d1e8"
 set -ogq @thm_surface "#e9badd"
+set -ogq @thm_visual "#dba3c6"
 
 # General
 set -ogq @thm_red "#ab1111"
