--- a/extras/tmux/themes/light/4/oasis_abyss_light_4.conf
+++ b/extras/tmux/themes/light/4/oasis_abyss_light_4.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#4e473f"
 set -ogq @thm_core "#f5ddc7"
 set -ogq @thm_mantle "#f3d5ba"
 set -ogq @thm_surface "#eec5a0"
+set -ogq @thm_visual "#e19d9d"
 
 # General
 set -ogq @thm_red "#a91111"
