--- a/extras/tmux/themes/light/4/oasis_cactus_light_4.conf
+++ b/extras/tmux/themes/light/4/oasis_cactus_light_4.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#405147"
 set -ogq @thm_core "#d6f0e1"
 set -ogq @thm_mantle "#cbecd9"
 set -ogq @thm_surface "#b4e4c8"
+set -ogq @thm_visual "#a4dac0"
 
 # General
 set -ogq @thm_red "#b31212"
