--- a/extras/tmux/themes/light/4/oasis_dune_light_4.conf
+++ b/extras/tmux/themes/light/4/oasis_dune_light_4.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#4f4d44"
 set -ogq @thm_core "#f0e9d1"
 set -ogq @thm_mantle "#ece3c5"
 set -ogq @thm_surface "#e5d8ae"
+set -ogq @thm_visual "#dacfa4"
 
 # General
 set -ogq @thm_red "#b21212"
