--- a/extras/tmux/themes/light/4/oasis_lagoon_light_4.conf
+++ b/extras/tmux/themes/light/4/oasis_lagoon_light_4.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#334561"
 set -ogq @thm_core "#c9dcf7"
 set -ogq @thm_mantle "#bcd3f5"
 set -ogq @thm_surface "#a1c2f1"
+set -ogq @thm_visual "#9fcae0"
 
 # General
 set -ogq @thm_red "#a11010"
