--- a/extras/tmux/themes/light/4/oasis_midnight_light_4.conf
+++ b/extras/tmux/themes/light/4/oasis_midnight_light_4.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#4d443e"
 set -ogq @thm_core "#f5d8c7"
 set -ogq @thm_mantle "#f3cfba"
 set -ogq @thm_surface "#eebda0"
+set -ogq @thm_visual "#e19d9d"
 
 # General
 set -ogq @thm_red "#a51111"
