--- a/extras/tmux/themes/light/4/oasis_mirage_light_4.conf
+++ b/extras/tmux/themes/light/4/oasis_mirage_light_4.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#3e5252"
 set -ogq @thm_core "#cdf4f4"
 set -ogq @thm_mantle "#c0f1f1"
 set -ogq @thm_surface "#a7ecec"
+set -ogq @thm_visual "#9fe0d7"
 
 # General
 set -ogq @thm_red "#b51212"
