--- a/extras/tmux/themes/light/4/oasis_night_light_4.conf
+++ b/extras/tmux/themes/light/4/oasis_night_light_4.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#4f3f2b"
 set -ogq @thm_core "#e3d7aa"
 set -ogq @thm_mantle "#e0d19f"
 set -ogq @thm_surface "#d8c688"
+set -ogq @thm_visual "#e1b69d"
 
 # General
 set -ogq @thm_red "#9d1010"
