--- a/extras/tmux/themes/light/4/oasis_rose_light_4.conf
+++ b/extras/tmux/themes/light/4/oasis_rose_light_4.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#513d4b"
 set -ogq @thm_core "#f3ceea"
 set -ogq @thm_mantle "#f0c2e5"
 set -ogq @thm_surface "#eaa9da"
+set -ogq @thm_visual "#dba3c6"
 
 # General
 set -ogq @thm_red "#9f1010"
