--- a/extras/tmux/themes/light/4/oasis_starlight_light_4.conf
+++ b/extras/tmux/themes/light/4/oasis_starlight_light_4.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#524b3b"
 set -ogq @thm_core "#f0e6d1"
 set -ogq @thm_mantle "#ece0c5"
 set -ogq @thm_surface "#e5d3ae"
+set -ogq @thm_visual "#dacfa4"
 
 # General
 set -ogq @thm_red "#af1212"
