--- a/extras/tmux/themes/light/5/oasis_abyss_light_5.conf
+++ b/extras/tmux/themes/light/5/oasis_abyss_light_5.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#48413b"
 set -ogq @thm_core "#f3d2ba"
 set -ogq @thm_mantle "#f1c9ad"
 set -ogq @thm_surface "#ecb893"
+set -ogq @thm_visual "#e19d9d"
 
 # General
 set -ogq @thm_red "#9f0f0f"
