--- a/extras/tmux/themes/light/5/oasis_cactus_light_5.conf
+++ b/extras/tmux/themes/light/5/oasis_cactus_light_5.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#3c4d44"
 set -ogq @thm_core "#cbebd7"
 set -ogq @thm_mantle "#c0e7cf"
 set -ogq @thm_surface "#aadebe"
+set -ogq @thm_visual "#a4dac0"
 
 # General
 set -ogq @thm_red "#ac1111"
