--- a/extras/tmux/themes/light/5/oasis_dune_light_5.conf
+++ b/extras/tmux/themes/light/5/oasis_dune_light_5.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#4a4940"
 set -ogq @thm_core "#ece1c6"
 set -ogq @thm_mantle "#e8dbbb"
 set -ogq @thm_surface "#e1cfa4"
+set -ogq @thm_visual "#dacfa4"
 
 # General
 set -ogq @thm_red "#a91010"
