--- a/extras/tmux/themes/light/5/oasis_lagoon_light_5.conf
+++ b/extras/tmux/themes/light/5/oasis_lagoon_light_5.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#30405b"
 set -ogq @thm_core "#bcd6f5"
 set -ogq @thm_mantle "#afcef3"
 set -ogq @thm_surface "#94beef"
+set -ogq @thm_visual "#9fcae0"
 
 # General
 set -ogq @thm_red "#990f0f"
