--- a/extras/tmux/themes/light/5/oasis_midnight_light_5.conf
+++ b/extras/tmux/themes/light/5/oasis_midnight_light_5.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#473f3a"
 set -ogq @thm_core "#f3cdba"
 set -ogq @thm_mantle "#f1c4ad"
 set -ogq @thm_surface "#ecb193"
+set -ogq @thm_visual "#e19d9d"
 
 # General
 set -ogq @thm_red "#9a0f0f"
