--- a/extras/tmux/themes/light/5/oasis_mirage_light_5.conf
+++ b/extras/tmux/themes/light/5/oasis_mirage_light_5.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#3c5050"
 set -ogq @thm_core "#c0f2ee"
 set -ogq @thm_mantle "#b3efeb"
 set -ogq @thm_surface "#9aeae4"
+set -ogq @thm_visual "#9fe0d7"
 
 # General
 set -ogq @thm_red "#b11111"
