--- a/extras/tmux/themes/light/5/oasis_rose_light_5.conf
+++ b/extras/tmux/themes/light/5/oasis_rose_light_5.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#4a3845"
 set -ogq @thm_core "#f0c2e7"
 set -ogq @thm_mantle "#edb6e2"
 set -ogq @thm_surface "#e79dd9"
+set -ogq @thm_visual "#dba3c6"
 
 # General
 set -ogq @thm_red "#950e0e"
