--- a/extras/tmux/themes/light/5/oasis_sol_light_5.conf
+++ b/extras/tmux/themes/light/5/oasis_sol_light_5.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#5b2e26"
 set -ogq @thm_core "#f3bfba"
 set -ogq @thm_mantle "#f1b3ad"
 set -ogq @thm_surface "#ec9b93"
+set -ogq @thm_visual "#e19d9d"
 
 # General
 set -ogq @thm_red "#8f0e0e"
