--- a/extras/tmux/themes/light/5/oasis_twilight_light_5.conf
+++ b/extras/tmux/themes/light/5/oasis_twilight_light_5.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#3b3351"
 set -ogq @thm_core "#cac2f0"
 set -ogq @thm_mantle "#bfb6ed"
 set -ogq @thm_surface "#aa9de7"
+set -ogq @thm_visual "#c3a1dd"
 
 # General
 set -ogq @thm_red "#8b0d0d"
