--- a/extras/tmux/themes/dark/oasis_desert_dark.conf
+++ b/extras/tmux/themes/dark/oasis_desert_dark.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#f7ede1"
 set -ogq @thm_core "#333333"
 set -ogq @thm_mantle "#444444"
 set -ogq @thm_surface "#555555"
+set -ogq @thm_visual "#666666"
 
 # General
 set -ogq @thm_red "#ff7979"
