--- a/extras/tmux/themes/dark/oasis_midnight_dark.conf
+++ b/extras/tmux/themes/dark/oasis_midnight_dark.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#f7f4f2"
 set -ogq @thm_core "#101418"
 set -ogq @thm_mantle "#14181c"
 set -ogq @thm_surface "#1c242c"
+set -ogq @thm_visual "#5a3824"
 
 # General
 set -ogq @thm_red "#ff7979"
