--- a/extras/tmux/themes/dark/oasis_mirage_dark.conf
+++ b/extras/tmux/themes/dark/oasis_mirage_dark.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#ddefef"
 set -ogq @thm_core "#18252a"
 set -ogq @thm_mantle "#1a2d33"
 set -ogq @thm_surface "#2a3f46"
+set -ogq @thm_visual "#5a3824"
 
 # General
 set -ogq @thm_red "#ff7979"
