--- a/extras/tmux/themes/dark/oasis_starlight_dark.conf
+++ b/extras/tmux/themes/dark/oasis_starlight_dark.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#faf7f0"
 set -ogq @thm_core "#000000"
 set -ogq @thm_mantle "#080808"
 set -ogq @thm_surface "#1a1a1a"
+set -ogq @thm_visual "#4d4528"
 
 # General
 set -ogq @thm_red "#ff7979"
