--- a/extras/tmux/themes/light/1/oasis_cactus_light_1.conf
+++ b/extras/tmux/themes/light/1/oasis_cactus_light_1.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#465b4f"
 set -ogq @thm_core "#f9fbfa"
 set -ogq @thm_mantle "#f0f5f2"
 set -ogq @thm_surface "#dde9e3"
+set -ogq @thm_visual "#a4dac0"
 
 # General
 set -ogq @thm_red "#c51414"
