--- a/extras/tmux/themes/light/1/oasis_dune_light_1.conf
+++ b/extras/tmux/themes/light/1/oasis_dune_light_1.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#58554c"
 set -ogq @thm_core "#f9f8f5"
 set -ogq @thm_mantle "#f3f1eb"
 set -ogq @thm_surface "#e8e4d8"
+set -ogq @thm_visual "#dacfa4"
 
 # General
 set -ogq @thm_red "#c21313"
