--- a/extras/tmux/themes/light/1/oasis_night_light_1.conf
+++ b/extras/tmux/themes/light/1/oasis_night_light_1.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#52422d"
 set -ogq @thm_core "#e0dbcc"
 set -ogq @thm_mantle "#dbd5c2"
 set -ogq @thm_surface "#cfc7af"
+set -ogq @thm_visual "#e1b69d"
 
 # General
 set -ogq @thm_red "#a21010"
