--- a/extras/tmux/themes/light/1/oasis_rose_light_1.conf
+++ b/extras/tmux/themes/light/1/oasis_rose_light_1.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#694e63"
 set -ogq @thm_core "#fbf9fb"
 set -ogq @thm_mantle "#f5f0f5"
 set -ogq @thm_surface "#e9dde9"
+set -ogq @thm_visual "#dba3c6"
 
 # General
 set -ogq @thm_red "#c41414"
