--- a/extras/tmux/themes/light/1/oasis_sol_light_1.conf
+++ b/extras/tmux/themes/light/1/oasis_sol_light_1.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#814236"
 set -ogq @thm_core "#f9f5f5"
 set -ogq @thm_mantle "#f3ebeb"
 set -ogq @thm_surface "#e8d8d8"
+set -ogq @thm_visual "#e19d9d"
 
 # General
 set -ogq @thm_red "#c01313"
