--- a/extras/tmux/themes/light/1/oasis_starlight_light_1.conf
+++ b/extras/tmux/themes/light/1/oasis_starlight_light_1.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#5c5442"
 set -ogq @thm_core "#f9f7f5"
 set -ogq @thm_mantle "#f3efeb"
 set -ogq @thm_surface "#e8e0d8"
+set -ogq @thm_visual "#dacfa4"
 
 # General
 set -ogq @thm_red "#c21313"
