--- a/extras/tmux/themes/light/1/oasis_twilight_light_1.conf
+++ b/extras/tmux/themes/light/1/oasis_twilight_light_1.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#5b4f7e"
 set -ogq @thm_core "#f9f9fb"
 set -ogq @thm_mantle "#f0f0f5"
 set -ogq @thm_surface "#dddde9"
+set -ogq @thm_visual "#c3a1dd"
 
 # General
 set -ogq @thm_red "#c41414"
