--- a/extras/tmux/themes/light/2/oasis_desert_light_2.conf
+++ b/extras/tmux/themes/light/2/oasis_desert_light_2.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#5f4e3b"
 set -ogq @thm_core "#f8f0e7"
 set -ogq @thm_mantle "#f5e9db"
 set -ogq @thm_surface "#eedac3"
+set -ogq @thm_visual "#dacfa4"
 
 # General
 set -ogq @thm_red "#bb1313"
