--- a/extras/tmux/themes/light/2/oasis_dune_light_2.conf
+++ b/extras/tmux/themes/light/2/oasis_dune_light_2.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#57544b"
 set -ogq @thm_core "#f9f6ec"
 set -ogq @thm_mantle "#f5f0e0"
 set -ogq @thm_surface "#eee5c9"
+set -ogq @thm_visual "#dacfa4"
 
 # General
 set -ogq @thm_red "#c01313"
