--- a/extras/tmux/themes/light/2/oasis_night_light_2.conf
+++ b/extras/tmux/themes/light/2/oasis_night_light_2.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#54432d"
 set -ogq @thm_core "#e9deb9"
 set -ogq @thm_mantle "#e5d8ae"
 set -ogq @thm_surface "#decd96"
+set -ogq @thm_visual "#e1b69d"
 
 # General
 set -ogq @thm_red "#a51111"
