--- a/extras/tmux/themes/light/2/oasis_rose_light_2.conf
+++ b/extras/tmux/themes/light/2/oasis_rose_light_2.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#61495c"
 set -ogq @thm_core "#f9ecf5"
 set -ogq @thm_mantle "#f5e0ef"
 set -ogq @thm_surface "#eec9e3"
+set -ogq @thm_visual "#dba3c6"
 
 # General
 set -ogq @thm_red "#b91313"
