--- a/extras/tmux/themes/light/2/oasis_twilight_light_2.conf
+++ b/extras/tmux/themes/light/2/oasis_twilight_light_2.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#544975"
 set -ogq @thm_core "#efecf9"
 set -ogq @thm_mantle "#e5e0f5"
 set -ogq @thm_surface "#d2c9ee"
+set -ogq @thm_visual "#c3a1dd"
 
 # General
 set -ogq @thm_red "#b71212"
