--- a/extras/tmux/themes/light/3/oasis_abyss_light_3.conf
+++ b/extras/tmux/themes/light/3/oasis_abyss_light_3.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#524b43"
 set -ogq @thm_core "#f7e5d4"
 set -ogq @thm_mantle "#f5ddc7"
 set -ogq @thm_surface "#f0cead"
+set -ogq @thm_visual "#e19d9d"
 
 # General
 set -ogq @thm_red "#b01212"
