--- a/extras/tmux/themes/light/3/oasis_cactus_light_3.conf
+++ b/extras/tmux/themes/light/3/oasis_cactus_light_3.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#405348"
 set -ogq @thm_core "#e0f0e7"
 set -ogq @thm_mantle "#d6ebdf"
 set -ogq @thm_surface "#c1e1cf"
+set -ogq @thm_visual "#a4dac0"
 
 # General
 set -ogq @thm_red "#b51212"
