--- a/extras/tmux/themes/light/3/oasis_desert_light_3.conf
+++ b/extras/tmux/themes/light/3/oasis_desert_light_3.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#5a4a38"
 set -ogq @thm_core "#f7e7d4"
 set -ogq @thm_mantle "#f5e0c7"
 set -ogq @thm_surface "#f0d1ad"
+set -ogq @thm_visual "#dacfa4"
 
 # General
 set -ogq @thm_red "#b21212"
