--- a/extras/tmux/themes/light/3/oasis_lagoon_light_3.conf
+++ b/extras/tmux/themes/light/3/oasis_lagoon_light_3.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#384b68"
 set -ogq @thm_core "#d9e5f7"
 set -ogq @thm_mantle "#ccdcf4"
 set -ogq @thm_surface "#b3cbef"
+set -ogq @thm_visual "#9fcae0"
 
 # General
 set -ogq @thm_red "#ac1111"
