--- a/extras/tmux/themes/light/3/oasis_night_light_3.conf
+++ b/extras/tmux/themes/light/3/oasis_night_light_3.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#52412d"
 set -ogq @thm_core "#e6dbb2"
 set -ogq @thm_mantle "#e2d5a6"
 set -ogq @thm_surface "#dbca8f"
+set -ogq @thm_visual "#e1b69d"
 
 # General
 set -ogq @thm_red "#a11010"
