--- a/extras/tmux/themes/light/3/oasis_sol_light_3.conf
+++ b/extras/tmux/themes/light/3/oasis_sol_light_3.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#6d382e"
 set -ogq @thm_core "#f7d9d4"
 set -ogq @thm_mantle "#f5cec7"
 set -ogq @thm_surface "#f0b7ad"
+set -ogq @thm_visual "#e19d9d"
 
 # General
 set -ogq @thm_red "#a71111"
