--- a/extras/tmux/themes/light/3/oasis_starlight_light_3.conf
+++ b/extras/tmux/themes/light/3/oasis_starlight_light_3.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#564f3e"
 set -ogq @thm_core "#f4eddd"
 set -ogq @thm_mantle "#f0e7d1"
 set -ogq @thm_surface "#e9dbba"
+set -ogq @thm_visual "#dacfa4"
 
 # General
 set -ogq @thm_red "#b71212"
