--- a/extras/tmux/themes/light/3/oasis_twilight_light_3.conf
+++ b/extras/tmux/themes/light/3/oasis_twilight_light_3.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#4a4268"
 set -ogq @thm_core "#e2ddf4"
 set -ogq @thm_mantle "#d8d1f0"
 set -ogq @thm_surface "#c4bae9"
+set -ogq @thm_visual "#c3a1dd"
 
 # General
 set -ogq @thm_red "#a71111"
