--- a/extras/tmux/themes/light/4/oasis_desert_light_4.conf
+++ b/extras/tmux/themes/light/4/oasis_desert_light_4.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#564634"
 set -ogq @thm_core "#f5dfc7"
 set -ogq @thm_mantle "#f3d8ba"
 set -ogq @thm_surface "#eec9a0"
+set -ogq @thm_visual "#dacfa4"
 
 # General
 set -ogq @thm_red "#aa1111"
