--- a/extras/tmux/themes/light/4/oasis_sol_light_4.conf
+++ b/extras/tmux/themes/light/4/oasis_sol_light_4.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#64332a"
 set -ogq @thm_core "#f5cdc7"
 set -ogq @thm_mantle "#f3c1ba"
 set -ogq @thm_surface "#eeaaa0"
+set -ogq @thm_visual "#e19d9d"
 
 # General
 set -ogq @thm_red "#9c1010"
