--- a/extras/tmux/themes/light/4/oasis_twilight_light_4.conf
+++ b/extras/tmux/themes/light/4/oasis_twilight_light_4.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#433a5c"
 set -ogq @thm_core "#d7cef3"
 set -ogq @thm_mantle "#cdc2f0"
 set -ogq @thm_surface "#b9a9ea"
+set -ogq @thm_visual "#c3a1dd"
 
 # General
 set -ogq @thm_red "#980f0f"
