--- a/extras/tmux/themes/light/5/oasis_desert_light_5.conf
+++ b/extras/tmux/themes/light/5/oasis_desert_light_5.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#504132"
 set -ogq @thm_core "#f3d5ba"
 set -ogq @thm_mantle "#f1cdad"
 set -ogq @thm_surface "#ecbd93"
+set -ogq @thm_visual "#dacfa4"
 
 # General
 set -ogq @thm_red "#a11010"
