--- a/extras/tmux/themes/light/5/oasis_night_light_5.conf
+++ b/extras/tmux/themes/light/5/oasis_night_light_5.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#4b3b28"
 set -ogq @thm_core "#e0cfa3"
 set -ogq @thm_mantle "#ddc998"
 set -ogq @thm_surface "#d5bd81"
+set -ogq @thm_visual "#e1b69d"
 
 # General
 set -ogq @thm_red "#950e0e"
