--- a/extras/tmux/themes/light/5/oasis_starlight_light_5.conf
+++ b/extras/tmux/themes/light/5/oasis_starlight_light_5.conf
@@ -14,6 +14,7 @@ set -ogq @thm_fg "#4d4738"
 set -ogq @thm_core "#f3deba"
 set -ogq @thm_mantle "#f1d8ad"
 set -ogq @thm_surface "#eccb93"
+set -ogq @thm_visual "#dacfa4"
 
 # General
 set -ogq @thm_red "#a81010"
