fix(lazygit): activeBorderColor and selectedLineBgColor
These colors were inconsistent with the colors used in the LazyGit
plugin for NeoVim.
- Bugs identified and resolved by pkazmier, ref #36.
- Regenerated all lazygit themes.

Co-authored-by: Pete Kazmier <747855+pkazmier@users.noreply.github.com>

--- a/extras/lazygit/themes/dark/oasis_cactus_dark.yml
+++ b/extras/lazygit/themes/dark/oasis_cactus_dark.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#FFA247'
+    - '#FFA0A0'
     - bold
   inactiveBorderColor:
     - '#7FBB82'
   optionsTextColor:
     - '#F0E68C'
   selectedLineBgColor:
-    - '#2C3A30'
+    - '#3C4B3E'
   cherryPickedCommitBgColor:
     - '#3C4B3E'
   cherryPickedCommitFgColor:
