--- a/extras/lazygit/themes/dark/oasis_dune_dark.yml
+++ b/extras/lazygit/themes/dark/oasis_dune_dark.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#FFA247'
+    - '#D2ADFF'
     - bold
   inactiveBorderColor:
     - '#CDC673'
   optionsTextColor:
     - '#F0E68C'
   selectedLineBgColor:
-    - '#3C332C'
+    - '#534A3F'
   cherryPickedCommitBgColor:
     - '#534A3F'
   cherryPickedCommitFgColor:
