--- a/extras/lazygit/themes/dark/oasis_rose_dark.yml
+++ b/extras/lazygit/themes/dark/oasis_rose_dark.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#F49F15'
+    - '#A8DDD5'
     - bold
   inactiveBorderColor:
     - '#FF9090'
   optionsTextColor:
     - '#F0E68C'
   selectedLineBgColor:
-    - '#3E2636'
+    - '#523A4B'
   cherryPickedCommitBgColor:
     - '#523A4B'
   cherryPickedCommitFgColor:
