--- a/extras/lazygit/themes/light/1/oasis_canyon_light_1.yml
+++ b/extras/lazygit/themes/light/1/oasis_canyon_light_1.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#5f5521'
+    - '#72aeda'
     - bold
   inactiveBorderColor:
     - '#a25507'
   optionsTextColor:
     - '#696223'
   selectedLineBgColor:
-    - '#f3efeb'
+    - '#e8e0d8'
   cherryPickedCommitBgColor:
     - '#e8e0d8'
   cherryPickedCommitFgColor:
