--- a/extras/lazygit/themes/light/1/oasis_lagoon_light_1.yml
+++ b/extras/lazygit/themes/light/1/oasis_lagoon_light_1.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#7c4a1d'
+    - '#dd986f'
     - bold
   inactiveBorderColor:
     - '#0961a0'
   optionsTextColor:
     - '#6a6423'
   selectedLineBgColor:
-    - '#f0f2f5'
+    - '#dde3e9'
   cherryPickedCommitBgColor:
     - '#dde3e9'
   cherryPickedCommitFgColor:
