--- a/extras/lazygit/themes/light/1/oasis_midnight_light_1.yml
+++ b/extras/lazygit/themes/light/1/oasis_midnight_light_1.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#784a1c'
+    - '#7ad1a1'
     - bold
   inactiveBorderColor:
     - '#a20707'
   optionsTextColor:
     - '#696223'
   selectedLineBgColor:
-    - '#f3edeb'
+    - '#e8dcd8'
   cherryPickedCommitBgColor:
     - '#e8dcd8'
   cherryPickedCommitFgColor:
