--- a/extras/lazygit/themes/light/1/oasis_mirage_light_1.yml
+++ b/extras/lazygit/themes/light/1/oasis_mirage_light_1.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#7b4b1d'
+    - '#dd986f'
     - bold
   inactiveBorderColor:
     - '#34746d'
   optionsTextColor:
     - '#6b6424'
   selectedLineBgColor:
-    - '#f0f5f2'
+    - '#dde9e3'
   cherryPickedCommitBgColor:
     - '#dde9e3'
   cherryPickedCommitFgColor:
