--- a/extras/lazygit/themes/light/1/oasis_night_light_1.yml
+++ b/extras/lazygit/themes/light/1/oasis_night_light_1.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#613c17'
+    - '#dd6f6f'
     - bold
   inactiveBorderColor:
     - '#a20707'
   optionsTextColor:
     - '#57511d'
   selectedLineBgColor:
-    - '#dbd5c2'
+    - '#cfc7af'
   cherryPickedCommitBgColor:
     - '#cfc7af'
   cherryPickedCommitFgColor:
