--- a/extras/lazygit/themes/light/1/oasis_rose_light_1.yml
+++ b/extras/lazygit/themes/light/1/oasis_rose_light_1.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#6e5120'
+    - '#72dacc'
     - bold
   inactiveBorderColor:
     - '#a20707'
   optionsTextColor:
     - '#6a6423'
   selectedLineBgColor:
-    - '#f5f0f5'
+    - '#e9dde9'
   cherryPickedCommitBgColor:
     - '#e9dde9'
   cherryPickedCommitFgColor:
