--- a/extras/lazygit/themes/light/1/oasis_twilight_light_1.yml
+++ b/extras/lazygit/themes/light/1/oasis_twilight_light_1.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#7a4b1d'
+    - '#d1be7a'
     - bold
   inactiveBorderColor:
     - '#4e07a2'
   optionsTextColor:
     - '#6a6323'
   selectedLineBgColor:
-    - '#f0f0f5'
+    - '#dddde9'
   cherryPickedCommitBgColor:
     - '#dddde9'
   cherryPickedCommitFgColor:
