--- a/extras/lazygit/themes/light/2/oasis_abyss_light_2.yml
+++ b/extras/lazygit/themes/light/2/oasis_abyss_light_2.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#75461b'
+    - '#7ad1a1'
     - bold
   inactiveBorderColor:
     - '#990505'
   optionsTextColor:
     - '#655f22'
   selectedLineBgColor:
-    - '#f5e9db'
+    - '#eedac3'
   cherryPickedCommitBgColor:
     - '#eedac3'
   cherryPickedCommitFgColor:
