--- a/extras/lazygit/themes/light/2/oasis_cactus_light_2.yml
+++ b/extras/lazygit/themes/light/2/oasis_cactus_light_2.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#76491c'
+    - '#dd6f6f'
     - bold
   inactiveBorderColor:
     - '#38663b'
   optionsTextColor:
     - '#686123'
   selectedLineBgColor:
-    - '#e4f2ea'
+    - '#cfe8da'
   cherryPickedCommitBgColor:
     - '#cfe8da'
   cherryPickedCommitFgColor:
