--- a/extras/lazygit/themes/light/2/oasis_canyon_light_2.yml
+++ b/extras/lazygit/themes/light/2/oasis_canyon_light_2.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#5b5120'
+    - '#72aeda'
     - bold
   inactiveBorderColor:
     - '#995005'
   optionsTextColor:
     - '#655f22'
   selectedLineBgColor:
-    - '#f5e9db'
+    - '#eedac3'
   cherryPickedCommitBgColor:
     - '#eedac3'
   cherryPickedCommitFgColor:
