--- a/extras/lazygit/themes/light/2/oasis_dune_light_2.yml
+++ b/extras/lazygit/themes/light/2/oasis_dune_light_2.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#77491c'
+    - '#ab76d6'
     - bold
   inactiveBorderColor:
     - '#726d2c'
   optionsTextColor:
     - '#686123'
   selectedLineBgColor:
-    - '#f5f0e0'
+    - '#eee5c9'
   cherryPickedCommitBgColor:
     - '#eee5c9'
   cherryPickedCommitFgColor:
