--- a/extras/lazygit/themes/light/2/oasis_midnight_light_2.yml
+++ b/extras/lazygit/themes/light/2/oasis_midnight_light_2.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#72461b'
+    - '#7ad1a1'
     - bold
   inactiveBorderColor:
     - '#990505'
   optionsTextColor:
     - '#655e22'
   selectedLineBgColor:
-    - '#f5e6db'
+    - '#eed5c3'
   cherryPickedCommitBgColor:
     - '#eed5c3'
   cherryPickedCommitFgColor:
