--- a/extras/lazygit/themes/light/2/oasis_mirage_light_2.yml
+++ b/extras/lazygit/themes/light/2/oasis_mirage_light_2.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#774a1c'
+    - '#dd986f'
     - bold
   inactiveBorderColor:
     - '#316e67'
   optionsTextColor:
     - '#686123'
   selectedLineBgColor:
-    - '#dff5f5'
+    - '#c8eeee'
   cherryPickedCommitBgColor:
     - '#c8eeee'
   cherryPickedCommitFgColor:
