--- a/extras/lazygit/themes/light/2/oasis_night_light_2.yml
+++ b/extras/lazygit/themes/light/2/oasis_night_light_2.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#643e17'
+    - '#dd6f6f'
     - bold
   inactiveBorderColor:
     - '#990505'
   optionsTextColor:
     - '#59531e'
   selectedLineBgColor:
-    - '#e5d8ae'
+    - '#decd96'
   cherryPickedCommitBgColor:
     - '#decd96'
   cherryPickedCommitFgColor:
