--- a/extras/lazygit/themes/light/2/oasis_rose_light_2.yml
+++ b/extras/lazygit/themes/light/2/oasis_rose_light_2.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#684c1d'
+    - '#72dacc'
     - bold
   inactiveBorderColor:
     - '#990505'
   optionsTextColor:
     - '#645e22'
   selectedLineBgColor:
-    - '#f5e0ef'
+    - '#eec9e3'
   cherryPickedCommitBgColor:
     - '#eec9e3'
   cherryPickedCommitFgColor:
