--- a/extras/lazygit/themes/light/2/oasis_sol_light_2.yml
+++ b/extras/lazygit/themes/light/2/oasis_sol_light_2.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#664a1c'
+    - '#7ad1a7'
     - bold
   inactiveBorderColor:
     - '#990505'
   optionsTextColor:
     - '#635c21'
   selectedLineBgColor:
-    - '#f5e0db'
+    - '#eecbc3'
   cherryPickedCommitBgColor:
     - '#eecbc3'
   cherryPickedCommitFgColor:
