--- a/extras/lazygit/themes/light/2/oasis_starlight_light_2.yml
+++ b/extras/lazygit/themes/light/2/oasis_starlight_light_2.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#77491c'
+    - '#dd986f'
     - bold
   inactiveBorderColor:
     - '#075b98'
   optionsTextColor:
     - '#686123'
   selectedLineBgColor:
-    - '#f5efe0'
+    - '#eee3c9'
   cherryPickedCommitBgColor:
     - '#eee3c9'
   cherryPickedCommitFgColor:
