--- a/extras/lazygit/themes/light/3/oasis_canyon_light_3.yml
+++ b/extras/lazygit/themes/light/3/oasis_canyon_light_3.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#564d1e'
+    - '#72aeda'
     - bold
   inactiveBorderColor:
     - '#914a03'
   optionsTextColor:
     - '#615a20'
   selectedLineBgColor:
-    - '#f5e0c7'
+    - '#f0d1ad'
   cherryPickedCommitBgColor:
     - '#f0d1ad'
   cherryPickedCommitFgColor:
