--- a/extras/lazygit/themes/light/3/oasis_dune_light_3.yml
+++ b/extras/lazygit/themes/light/3/oasis_dune_light_3.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#71461c'
+    - '#ab76d6'
     - bold
   inactiveBorderColor:
     - '#6c6628'
   optionsTextColor:
     - '#645d21'
   selectedLineBgColor:
-    - '#f0ead1'
+    - '#e9dfba'
   cherryPickedCommitBgColor:
     - '#e9dfba'
   cherryPickedCommitFgColor:
