--- a/extras/lazygit/themes/light/3/oasis_lagoon_light_3.yml
+++ b/extras/lazygit/themes/light/3/oasis_lagoon_light_3.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#6a401a'
+    - '#dd986f'
     - bold
   inactiveBorderColor:
     - '#05558f'
   optionsTextColor:
     - '#5d571f'
   selectedLineBgColor:
-    - '#ccdcf4'
+    - '#b3cbef'
   cherryPickedCommitBgColor:
     - '#b3cbef'
   cherryPickedCommitFgColor:
