--- a/extras/lazygit/themes/light/3/oasis_mirage_light_3.yml
+++ b/extras/lazygit/themes/light/3/oasis_mirage_light_3.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#72461c'
+    - '#dd986f'
     - bold
   inactiveBorderColor:
     - '#2d6760'
   optionsTextColor:
     - '#655e21'
   selectedLineBgColor:
-    - '#cff2f2'
+    - '#b7ebeb'
   cherryPickedCommitBgColor:
     - '#b7ebeb'
   cherryPickedCommitFgColor:
