--- a/extras/lazygit/themes/light/3/oasis_night_light_3.yml
+++ b/extras/lazygit/themes/light/3/oasis_night_light_3.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#613c18'
+    - '#dd6f6f'
     - bold
   inactiveBorderColor:
     - '#910303'
   optionsTextColor:
     - '#57511d'
   selectedLineBgColor:
-    - '#e2d5a6'
+    - '#dbca8f'
   cherryPickedCommitBgColor:
     - '#dbca8f'
   cherryPickedCommitFgColor:
