--- a/extras/lazygit/themes/light/3/oasis_rose_light_3.yml
+++ b/extras/lazygit/themes/light/3/oasis_rose_light_3.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#5e451b'
+    - '#72dacc'
     - bold
   inactiveBorderColor:
     - '#910303'
   optionsTextColor:
     - '#5d561f'
   selectedLineBgColor:
-    - '#f0d1e8'
+    - '#e9badd'
   cherryPickedCommitBgColor:
     - '#e9badd'
   cherryPickedCommitFgColor:
