--- a/extras/lazygit/themes/light/3/oasis_starlight_light_3.yml
+++ b/extras/lazygit/themes/light/3/oasis_starlight_light_3.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#71451b'
+    - '#dd986f'
     - bold
   inactiveBorderColor:
     - '#05558f'
   optionsTextColor:
     - '#645d21'
   selectedLineBgColor:
-    - '#f0e7d1'
+    - '#e9dbba'
   cherryPickedCommitBgColor:
     - '#e9dbba'
   cherryPickedCommitFgColor:
