--- a/extras/lazygit/themes/light/3/oasis_twilight_light_3.yml
+++ b/extras/lazygit/themes/light/3/oasis_twilight_light_3.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#653f19'
+    - '#d1be7a'
     - bold
   inactiveBorderColor:
     - '#440391'
   optionsTextColor:
     - '#5b541e'
   selectedLineBgColor:
-    - '#d8d1f0'
+    - '#c4bae9'
   cherryPickedCommitBgColor:
     - '#c4bae9'
   cherryPickedCommitFgColor:
