--- a/extras/lazygit/themes/light/4/oasis_abyss_light_4.yml
+++ b/extras/lazygit/themes/light/4/oasis_abyss_light_4.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#673e19'
+    - '#7ad1a1'
     - bold
   inactiveBorderColor:
     - '#880101'
   optionsTextColor:
     - '#5b551f'
   selectedLineBgColor:
-    - '#f3d5ba'
+    - '#eec5a0'
   cherryPickedCommitBgColor:
     - '#eec5a0'
   cherryPickedCommitFgColor:
