--- a/extras/lazygit/themes/light/4/oasis_canyon_light_4.yml
+++ b/extras/lazygit/themes/light/4/oasis_canyon_light_4.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#51491c'
+    - '#72aeda'
     - bold
   inactiveBorderColor:
     - '#884501'
   optionsTextColor:
     - '#5c561f'
   selectedLineBgColor:
-    - '#f3d8ba'
+    - '#eec9a0'
   cherryPickedCommitBgColor:
     - '#eec9a0'
   cherryPickedCommitFgColor:
