--- a/extras/lazygit/themes/light/4/oasis_desert_light_4.yml
+++ b/extras/lazygit/themes/light/4/oasis_desert_light_4.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#674019'
+    - '#dd986f'
     - bold
   inactiveBorderColor:
     - '#8a0a0a'
   optionsTextColor:
     - '#5c561f'
   selectedLineBgColor:
-    - '#f3d8ba'
+    - '#eec9a0'
   cherryPickedCommitBgColor:
     - '#eec9a0'
   cherryPickedCommitFgColor:
