--- a/extras/lazygit/themes/light/4/oasis_mirage_light_4.yml
+++ b/extras/lazygit/themes/light/4/oasis_mirage_light_4.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#70451b'
+    - '#dd986f'
     - bold
   inactiveBorderColor:
     - '#29615a'
   optionsTextColor:
     - '#625c21'
   selectedLineBgColor:
-    - '#c0f1f1'
+    - '#a7ecec'
   cherryPickedCommitBgColor:
     - '#a7ecec'
   cherryPickedCommitFgColor:
