--- a/extras/lazygit/themes/light/4/oasis_sol_light_4.yml
+++ b/extras/lazygit/themes/light/4/oasis_sol_light_4.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#543d18'
+    - '#7ad1a7'
     - bold
   inactiveBorderColor:
     - '#880101'
   optionsTextColor:
     - '#544e1c'
   selectedLineBgColor:
-    - '#f3c1ba'
+    - '#eeaaa0'
   cherryPickedCommitBgColor:
     - '#eeaaa0'
   cherryPickedCommitFgColor:
