--- a/extras/lazygit/themes/light/5/oasis_abyss_light_5.yml
+++ b/extras/lazygit/themes/light/5/oasis_abyss_light_5.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#5f3a17'
+    - '#7ad1a1'
     - bold
   inactiveBorderColor:
     - '#800000'
   optionsTextColor:
     - '#554f1c'
   selectedLineBgColor:
-    - '#f1c9ad'
+    - '#ecb893'
   cherryPickedCommitBgColor:
     - '#ecb893'
   cherryPickedCommitFgColor:
