--- a/extras/lazygit/themes/light/5/oasis_cactus_light_5.yml
+++ b/extras/lazygit/themes/light/5/oasis_cactus_light_5.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#684019'
+    - '#dd6f6f'
     - bold
   inactiveBorderColor:
     - '#2c532e'
   optionsTextColor:
     - '#5c561f'
   selectedLineBgColor:
-    - '#c0e7cf'
+    - '#aadebe'
   cherryPickedCommitBgColor:
     - '#aadebe'
   cherryPickedCommitFgColor:
