--- a/extras/lazygit/themes/light/5/oasis_canyon_light_5.yml
+++ b/extras/lazygit/themes/light/5/oasis_canyon_light_5.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#4b441a'
+    - '#72aeda'
     - bold
   inactiveBorderColor:
     - '#804000'
   optionsTextColor:
     - '#56511d'
   selectedLineBgColor:
-    - '#f1cdad'
+    - '#ecbd93'
   cherryPickedCommitBgColor:
     - '#ecbd93'
   cherryPickedCommitFgColor:
