--- a/extras/lazygit/themes/light/5/oasis_desert_light_5.yml
+++ b/extras/lazygit/themes/light/5/oasis_desert_light_5.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#603b17'
+    - '#dd986f'
     - bold
   inactiveBorderColor:
     - '#810808'
   optionsTextColor:
     - '#56511d'
   selectedLineBgColor:
-    - '#f1cdad'
+    - '#ecbd93'
   cherryPickedCommitBgColor:
     - '#ecbd93'
   cherryPickedCommitFgColor:
