--- a/extras/lazygit/themes/light/5/oasis_dune_light_5.yml
+++ b/extras/lazygit/themes/light/5/oasis_dune_light_5.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#673f19'
+    - '#ab76d6'
     - bold
   inactiveBorderColor:
     - '#5e5922'
   optionsTextColor:
     - '#5b551e'
   selectedLineBgColor:
-    - '#e8dbbb'
+    - '#e1cfa4'
   cherryPickedCommitBgColor:
     - '#e1cfa4'
   cherryPickedCommitFgColor:
