--- a/extras/lazygit/themes/light/5/oasis_lagoon_light_5.yml
+++ b/extras/lazygit/themes/light/5/oasis_lagoon_light_5.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#5b3716'
+    - '#dd986f'
     - bold
   inactiveBorderColor:
     - '#024a7e'
   optionsTextColor:
     - '#524d1b'
   selectedLineBgColor:
-    - '#afcef3'
+    - '#94beef'
   cherryPickedCommitBgColor:
     - '#94beef'
   cherryPickedCommitFgColor:
