--- a/extras/lazygit/themes/light/5/oasis_mirage_light_5.yml
+++ b/extras/lazygit/themes/light/5/oasis_mirage_light_5.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#6c431a'
+    - '#dd986f'
     - bold
   inactiveBorderColor:
     - '#265a54'
   optionsTextColor:
     - '#605a20'
   selectedLineBgColor:
-    - '#b3efeb'
+    - '#9aeae4'
   cherryPickedCommitBgColor:
     - '#9aeae4'
   cherryPickedCommitFgColor:
