--- a/extras/lazygit/themes/light/5/oasis_rose_light_5.yml
+++ b/extras/lazygit/themes/light/5/oasis_rose_light_5.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#4f3a16'
+    - '#72dacc'
     - bold
   inactiveBorderColor:
     - '#800000'
   optionsTextColor:
     - '#4f4a1a'
   selectedLineBgColor:
-    - '#edb6e2'
+    - '#e79dd9'
   cherryPickedCommitBgColor:
     - '#e79dd9'
   cherryPickedCommitFgColor:
