--- a/extras/lazygit/themes/light/5/oasis_starlight_light_5.yml
+++ b/extras/lazygit/themes/light/5/oasis_starlight_light_5.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#663f19'
+    - '#dd986f'
     - bold
   inactiveBorderColor:
     - '#024a7e'
   optionsTextColor:
     - '#5b551e'
   selectedLineBgColor:
-    - '#f1d8ad'
+    - '#eccb93'
   cherryPickedCommitBgColor:
     - '#eccb93'
   cherryPickedCommitFgColor:
