--- a/extras/lazygit/themes/light/2/oasis_desert_light_2.yml
+++ b/extras/lazygit/themes/light/2/oasis_desert_light_2.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#73471b'
+    - '#dd986f'
     - bold
   inactiveBorderColor:
     - '#9a0e0e'
   optionsTextColor:
     - '#655f22'
   selectedLineBgColor:
-    - '#f5e9db'
+    - '#eedac3'
   cherryPickedCommitBgColor:
     - '#eedac3'
   cherryPickedCommitFgColor:
