--- a/extras/lazygit/themes/light/3/oasis_abyss_light_3.yml
+++ b/extras/lazygit/themes/light/3/oasis_abyss_light_3.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#6e421b'
+    - '#7ad1a1'
     - bold
   inactiveBorderColor:
     - '#910303'
   optionsTextColor:
     - '#605920'
   selectedLineBgColor:
-    - '#f5ddc7'
+    - '#f0cead'
   cherryPickedCommitBgColor:
     - '#f0cead'
   cherryPickedCommitFgColor:
