--- a/extras/lazygit/themes/light/4/oasis_midnight_light_4.yml
+++ b/extras/lazygit/themes/light/4/oasis_midnight_light_4.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#633d18'
+    - '#7ad1a1'
     - bold
   inactiveBorderColor:
     - '#880101'
   optionsTextColor:
     - '#59531e'
   selectedLineBgColor:
-    - '#f3cfba'
+    - '#eebda0'
   cherryPickedCommitBgColor:
     - '#eebda0'
   cherryPickedCommitFgColor:
