--- a/extras/lazygit/themes/light/4/oasis_rose_light_4.yml
+++ b/extras/lazygit/themes/light/4/oasis_rose_light_4.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#563f19'
+    - '#72dacc'
     - bold
   inactiveBorderColor:
     - '#880101'
   optionsTextColor:
     - '#56501d'
   selectedLineBgColor:
-    - '#f0c2e5'
+    - '#eaa9da'
   cherryPickedCommitBgColor:
     - '#eaa9da'
   cherryPickedCommitFgColor:
