--- a/extras/lazygit/themes/light/5/oasis_midnight_light_5.yml
+++ b/extras/lazygit/themes/light/5/oasis_midnight_light_5.yml
@@ -4,14 +4,14 @@
 
 theme:
   activeBorderColor:
-    - '#5b3816'
+    - '#7ad1a1'
     - bold
   inactiveBorderColor:
     - '#800000'
   optionsTextColor:
     - '#534d1b'
   selectedLineBgColor:
-    - '#f1c4ad'
+    - '#ecb193'
   cherryPickedCommitBgColor:
     - '#ecb193'
   cherryPickedCommitFgColor:
